[tool.poetry]
name = "zorya"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Flask = "1.1.2"
Werkzeug = "1.0.1"
google-api-python-client = "^2.3.0"
google-auth = "^1.30.0"
google-auth-httplib2 = "^0.1.0"
pytz = "^2021.1"
tzlocal = "^2.1"
backoff = "1.10.0"
google-cloud-ndb = "1.8.0"
google-cloud-tasks = "1.5.0"
google-cloud-logging = "^2.3.1"
googleapis-common-protos = "1.53.0"
numpy = "^1.20.2"

[tool.poetry.dev-dependencies]
black = "^21.5b0"
flake8 = "^3.9.1"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
